update student_majors, semester module